# plux

./: .gitignore  CODEOWNERS  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: build.yml
docs/: conf.py  index.rst
docs/reference/: build_discovery.rst  runtime_discovery.rst  setuptools_integration.rst
docs/tutorials/: index.rst
docs/user_guide/: build_integration.rst  cli.rst  defining_loading_plugins.rst  filters.rst  lifecycle_listener.rst  plugin_manager.rst  quickstart.rst
plugin/: __init__.py  core.py  discovery.py  entrypoint.py  manager.py  metadata.py  setuptools.py
plux/: __init__.py  __main__.py
plux/cli/: cli.py
plux/core/: __init__.py  entrypoint.py  plugin.py
plux/runtime/: __init__.py  cache.py  filter.py  manager.py  metadata.py  resolve.py
tests/: conftest.py  test_discovery.py  test_entrypoint.py  test_function_plugin.py  test_listener.py  test_manager.py  test_metadata.py
tests/cli/: test_discover.py  test_entrypoints.py  test_hatch.py  test_hatchling.py
tests/cli/projects/hatch/namespace_package/: pyproject.toml
tests/cli/projects/hatch_manual_build_mode/: pyproject.toml
tests/cli/projects/hatch_manual_build_mode/test_project/subpkg/: plugins.py
tests/cli/projects/hatchling/manual_build_mode/: pyproject.toml
tests/cli/projects/hatchling/namespace_package/: pyproject.toml
tests/cli/projects/hatchling_manual_mode/: .gitignore  pyproject.toml
tests/cli/projects/hatchling_manual_mode/mysrc/: plugins.py
tests/cli/projects/hatchling_manual_mode/mysrc/subpkg/: __init__.py
tests/cli/projects/manual_build_mode/: plux.ini  pyproject.toml
tests/cli/projects/pyproject/: pyproject.toml
tests/cli/projects/setupcfg/: setup.cfg
tests/plugins/: invalid_module.py  sample_plugins.py
tests/runtime/: test_cache.py  test_resolve.py
