[metadata]
name = localstack-plugin-loader
version = attr: plugin.__version__
url = https://github.com/localstack/localstack-plugin-loader
author = Thomas Rausch
author_email = thomas@localstack.cloud
description = The dynamic code loading framework used in LocalStack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
setup_requires =
    pytest-runner
	setuptools
	wheel
install_requires =
    stevedore>=3.4
test_requires =
    pytest==6.2.4

[options.extras_require]
dev =
    pytest==6.2.4
    black==21.6b0
    isort==5.9.1

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md

