[metadata]
name = plux
version = attr: plugin.__version__
url = https://github.com/localstack/plux
author = Thomas Rausch
author_email = thomas@localstack.cloud
description = A dynamic code loading framework for building pluggable Python distributions
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = Apache License 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
zip_safe = False
packages = find:
setup_requires =
	setuptools
	wheel
install_requires =
    stevedore>=3.4
test_requires =
    setuptools
    pytest==6.2.4

[options.extras_require]
dev =
    setuptools
    pytest==6.2.4
    black==22.3.0
    isort==5.9.1

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md

[options.entry_points]
distutils.commands =
    plugins = plugin.setuptools:plugins
egg_info.writers =
    # this is actually not a writer, it's a reader :-)
    plux.json = plugin.setuptools:load_plux_entrypoints
