[build-system]
requires = ["setuptools", "wheel", "plux"]
build-backend = "setuptools.build_meta"

[project]
name = "test-project"
authors = [
    { name = "LocalStack Contributors", email = "info@localstack.cloud" }
]
version = "0.1.0"
description = "A test project to test plux with pyproject.toml projects"
dependencies = [
    "plux",
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["mysrc*"]
