[metadata]
name = test-project
version = 0.1.0
author = LocalStack Team
author_email = info@localstack.cloud
description = A test project to test plux with setup.cfg projects
license = Proprietary
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
zip_safe = False
packages = find:

# Only contains dependencies necessary to use the CLI
install_requires =
    plux

[options.packages.find]
exclude =
    tests*
